WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
262916
4x imported/mozilla/svg/text/* (layout-tests) are flaky image failures
https://bugs.webkit.org/show_bug.cgi?id=262916
Summary
4x imported/mozilla/svg/text/* (layout-tests) are flaky image failures
Richard Robinson
Reported
2023-10-09 13:15:41 PDT
rdar://114780887
Attachments
Add attachment
proposed patch, testcase, etc.
Richard Robinson
Comment 1
2023-10-09 13:56:50 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/18862
EWS
Comment 2
2023-10-10 06:49:13 PDT
Committed
269138@main
(486a57246e8e): <
https://commits.webkit.org/269138@main
> Reviewed commits have been landed. Closing PR #18862 and removing active labels.
EWS
Comment 3
2023-10-10 20:55:42 PDT
Committed
267815.263@safari-7617-branch
(73a2a99ed254): <
https://commits.webkit.org/267815.263@safari-7617-branch
> Reviewed commits have been landed. Closing PR #828 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug