Cherry-pick 269138@main (486a57246e8e). rdar://116743528

4x imported/mozilla/svg/text/* (layout-tests) are flaky image failures
    https://bugs.webkit.org/show_bug.cgi?id=262916
    rdar://114780887

    Reviewed by Wenson Hsieh.

    This is the effectively the same problem as https://bugs.webkit.org/show_bug.cgi?id=199196,
    but this time in the `UI_TEXT_SELECTION_DISPLAY_INTERACTION` code path.

    Fix by applying a similar workaround that fixed the aforementioned bug; this time, by temporarily
    deactivating the text selection interaction which also hides all of its views, including the
    highlight and handle views.

    * Tools/WebKitTestRunner/ios/PlatformWebViewIOS.mm:
    (WTR::PlatformWebView::windowSnapshotImage):

    Canonical link: https://commits.webkit.org/269138@main

Canonical link: https://commits.webkit.org/267815.263@safari-7617-branch